--- a/package.json
+++ b/package.json
@@ -9,9 +9,30 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.1.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "@clerk/nextjs": "^6.37.4",
+    "@clerk/themes": "^2.4.52",
+    "@google/generative-ai": "^0.24.1",
+    "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^6.19.2",
+    "@tanstack/react-query": "^5.90.21",
+    "caniuse-lite": "^1.0.30001770",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.34.1",
+    "lucide-react": "^0.564.0",
+    "next": "latest",
+    "next-themes": "^0.4.6",
+    "openai": "^6.22.0",
+    "react": "latest",
+    "react-confetti": "^6.4.0",
+    "react-dom": "latest",
+    "react-hook-form": "^7.71.1",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
+    "react-use": "^17.6.0",
+    "recharts": "^3.7.0",
+    "tailwind-merge": "^3.4.1",
+    "zod": "^4.3.6",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -20,8 +41,10 @@
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.1.6",
+    "eslint-config-next": "latest",
+    "prisma": "^6.19.2",
     "tailwindcss": "^4",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
